@@ -75,7 +75,7 @@
     <para>
       The basic scheme is very simple. Information about each application (menu
       item) is stored in a desktop entry (see <ulink
-        url="http://www.freedesktop.org/standards/desktop-entry-spec">Desktop
+        url="http://www.freedesktop.org/Standards/desktop-entry-spec">Desktop
       Entry Standard</ulink>).  Then an XML configuration file defines the
       hierarchical arrangement (layout) of menu items, and which menu items are
       actually displayed.
@@ -96,9 +96,9 @@
   <sect1 id="paths">
     <title>File locations</title>
     <para>
-      Files involved in this specification are located according to the "desktop
-      base directory specification" which can be found on <ulink
-      url="http://www.freedesktop.org/standards/">www.freedesktop.org</ulink>.
+      Files involved in this specification are located according to the <ulink
+      url="http://www.freedesktop.org/Standards/basedir-spec">"desktop
+      base directory specification"</ulink>.
     </para>
     <para>
       Here are the files defined by this specification:
@@ -175,7 +175,7 @@
     <title>Extensions to the desktop entry format</title>
     <para>
       This specification adds three new fields to <ulink
-url="http://www.freedesktop.org/standards/desktop-entry-spec">desktop
+url="http://www.freedesktop.org/Standards/desktop-entry-spec">desktop
 entries</ulink>: <varname>Categories</varname>,
       <varname>OnlyShowIn</varname> and <varname>NotShowIn</varname>.
     </para>
@@ -1975,7 +1975,7 @@ entries</ulink>: <varname>Categories</varname>,
         <para>
           A desktop entry is a file with a name ending in the ".desktop"
           extension which conforms to the <ulink
-		  url="http://www.freedesktop.org/standards/desktop-entry-spec">desktop
+		  url="http://www.freedesktop.org/Standards/desktop-entry-spec">desktop
           entry specification</ulink>. It describes a menu item, including 
           a name, an icon, and what to do when the item is selected.
           Desktop entries are also known as ".desktop files."
@@ -2005,7 +2005,7 @@ entries</ulink>: <varname>Categories</varname>,
         <para>
           A directory entry is a file with a name ending in the ".directory"
           extension which conforms to the <ulink
-		  url="http://www.freedesktop.org/standards/desktop-entry-spec">desktop
+		  url="http://www.freedesktop.org/Standards/desktop-entry-spec">desktop
           entry specification</ulink>. It describes gives a localized name and 
           an icon for a submenu.
           Directory entries are also known as ".directory files."
